[back][create]: recruit_mvp
